# PrestoPalette

./: .clang-format  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  GamutPal.pro  Info.plist  LICENSE  Launcher  Makefile  PrestoPalette.iss  PrestoPalette.plist.in  PrestoPalette.pro  PrestoPalette.spec  README.md  aboutdialog.cpp  aboutdialog.h  application.rc.in  appveyor.yml  bitbucket-pipelines.yml  circlepalette.cpp  circlepalette.h  clickablelabel.cpp  clickablelabel.h  cmake_extra  gui_aboutdialog.h  gui_mainwindow.h  lightingsliderstyle.cpp  lightingsliderstyle.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  visualpalette.cpp  visualpalette.h
app/: build.sh
cmake/: print_all.cmake  print_target_properties.cmake
graphics/: PrestoAssets.rar  Wheel_BG_Template.psd  favicon.icns
res/: prestopalette.desktop
scripts/: Dockerfile.centos7  Dockerfile.debian  Dockerfile.fedora  Dockerfile.ubuntu.artful  build_fedora.sh  build_fedora_rpm.sh  build_linux-cmake-debug.sh  build_linux-cmake-release.sh  build_linux-debug.sh  build_linux-release.sh  build_linux.sh  build_mingw64-release.sh  build_osx-release.sh  build_osx.sh  build_qmake.sh  build_windows-release.bat  build_windows.bat  build_windows_set_env.bat  docker-worker.sh  fix_graphics.sh  qmake_build_linux-debug.sh  setup_centos7.sh  setup_debian.sh  setup_fedora.sh  setup_osx.sh  setup_ubuntu.sh
